[gd_scene load_steps=4 format=3 uid="uid://ch6a3nsnrbga2"]

[ext_resource type="Script" path="res://s_new_game.gd" id="1_7a6jt"]
[ext_resource type="PackedScene" uid="uid://cbtcuhi1yip6y" path="res://s_ct.tscn" id="2_cxmhh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gichw"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.101961, 0.156863, 0.109804, 1)

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_7a6jt")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -105.0
offset_right = 160.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gichw")

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="CTDifficulty" parent="PanelContainer/GridContainer" instance=ExtResource("2_cxmhh")]
layout_mode = 2

[node name="CTGalaxySize" parent="PanelContainer/GridContainer" instance=ExtResource("2_cxmhh")]
layout_mode = 2

[node name="CTGalaxyAge" parent="PanelContainer/GridContainer" instance=ExtResource("2_cxmhh")]
layout_mode = 2

[node name="CTPlayers" parent="PanelContainer/GridContainer" instance=ExtResource("2_cxmhh")]
layout_mode = 2

[node name="CTTechLevel" parent="PanelContainer/GridContainer" instance=ExtResource("2_cxmhh")]
layout_mode = 2
